--- a/package.json
+++ b/package.json
@@ -10,10 +10,32 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-community/datetimepicker": "^8.4.4",
+    "@react-native/new-app-screen": "0.81.0",
+    "@react-navigation/drawer": "^7.5.7",
+    "@react-navigation/native": "^7.1.17",
+    "@react-navigation/native-stack": "^7.3.25",
+    "axios": "^1.11.0",
+    "formik": "^2.4.6",
     "react": "19.1.0",
     "react-native": "0.81.0",
-    "@react-native/new-app-screen": "0.81.0",
-    "react-native-safe-area-context": "^5.5.2"
+    "react-native-asset": "^2.1.1",
+    "react-native-calendars": "^1.1313.0",
+    "react-native-date-picker": "^5.0.13",
+    "react-native-gesture-handler": "^2.28.0",
+    "react-native-html-to-pdf": "^0.12.0",
+    "react-native-paper": "^5.14.5",
+    "react-native-picker-select": "^9.3.1",
+    "react-native-reanimated": "^4.0.2",
+    "react-native-responsive-screen": "^1.4.2",
+    "react-native-safe-area-context": "^5.6.0",
+    "react-native-screens": "^4.14.1",
+    "react-native-svg": "^15.12.1",
+    "react-native-view-shot": "^4.0.3",
+    "react-native-worklets": "^0.4.1",
+    "rn-fetch-blob": "^0.12.0",
+    "yup": "^1.7.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
